# fastapi_online_store

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: 0840945ad562_added_is_admin.py  1029dc1b919e_inintial.py  d26c975b7fcd_del.py
src/: main.py  models.py
src/product/: crud.py  router.py  schemas.py
src/user/: base_config.py  crud.py  manager.py  router.py  schemas.py
tests/: conftest.py  test_product.py  test_user.py
